--- a/Index.html
+++ b/Index.html
@@ -454,7 +454,7 @@
           </section>
         <!-- card-comman end-->
         <!-- acocordion section start -->
-        <section>
+        <section class="mb-5 pb-5">
           <div class="text-center">
             <h1>Frequently Asked Questions</h1>
             <p>  It is a long established fact that a reader will be distracted by the readable 
@@ -507,7 +507,44 @@
           </div>
         </section>
         <!-- acocordion section End -->
+        <!-- company logo start -->
+        <section class="mb-5 pb-5">
+          <div class="text-center">
+            <h1>Trusted by over 800+ companies</h1>
+          </div>
+           <br>
+           <div class="container">
+            <div class="d-flex justify-content-between ">
+              <img src="/images/company/company-1.png" alt="">
+              <img src="/images/company/company-2.png" alt="">
+              <img src="/images/company/company-3.png" alt="">
+              <img src="/images/company/company-4.png" alt="">
+              <img src="/images/company/company-5.png" alt="">
+              <img src="/images/company/company-6.png" alt="">
+            </div>
+           </div>         
+        </section>
+        <!-- company logo end -->
 
+        <!-- Footer start -->
+        <footer class="bg-dark p-5">
+          <div class="container text-center">
+            <div>
+              <h1 class="text-white">Pro Edu</h1>
+              <p class="text-light">Office 41, Zawaya Buildin, Ghala Muscat, 
+
+               <br> Sultanate of Oman <br>
+                Privacy Ploicy | Terms of use</p>
+            </div>
+            <div class="fs-3 text gap-4">
+              <i class="fa-brands fa-facebook text-white"></i>
+              <i class="fa-brands fa-twitter  text-white"></i>
+              <i class="fa-brands fa-google text-white"></i>
+              <i class="fa-brands fa-tiktok text-white"></i>
+            </div>
+          </div>
+        </footer>
+        <!-- Footer end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
