--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
         >
           <div class="carousel-inner">
             <!-- First Slider -->
-            <div class="carousel-item active">
+            <div class="carousel-item rounded-3 active">
               <img
                 style="min-height: 400px"
                 src="./images/cover/cover-1.png"
@@ -143,11 +143,11 @@
               </div>
             </div>
             <!-- Third Slider -->
-            <div class="carousel-item">
+            <div class="carousel-item ">
               <img
                 style="min-height: 400px"
                 src="./images/cover/cover-3.jpg"
-                class="d-block w-100"
+                class="d-block w-100 rounded-3"
                 alt="..."
               />
               <div class="carousel-caption">
@@ -205,13 +205,13 @@
             content of a page when looking at its layout.
           </p>
         </div>
-        <div class="container">
+        <div class="container ">
           <div class="row mt-5">
             <div class="col-lg-6 col-md-12">
               <div class="col-sm-12">
                 <!-- Card No : 1 -->
                 <div
-                  class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                  class="d-flex justify-content-between  flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
                 >
                   <img
                     src="./images/course/course-1.png"
@@ -220,18 +220,18 @@
                   />
                   <div class="ms-3 mt-4 d-flex align-items-center lh-sm">
                     <article>
-                      <h3>Fundamental of UI/UX Design</h3>
+                      <h4>Fundamental of UI/UX Design</h4>
                       <p class="text-secondary">
                         Some quick example text to build on the card title and
                         make up the bulk of the card.
                       </p>
-                      <h3 class="text-info">Price : 20$</h3>
+                      <h5 class="text-info">Price:20$</h5>
                     </article>
                   </div>
                 </div>
                 <!-- Card No : 2 -->
                 <div
-                  class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                  class="d-flex justify-content-between flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
                 >
                   <img
                     src="./images/course/course-3.png"
@@ -240,18 +240,18 @@
                   />
                   <div class="ms-3 mt-4 d-flex align-items-center lh-sm">
                     <article>
-                      <h3>Fundamental of UI/UX Design</h3>
+                      <h4>Javascript Basic to advanced</h4>
                       <p class="text-secondary">
                         Some quick example text to build on the card title and
                         make up the bulk of the card.
                       </p>
-                      <h3 class="text-info">Price : 20$</h3>
+                      <h5 class="text-info">Price:30$</h5>
                     </article>
                   </div>
                 </div>
                 <!-- Card No : 3 -->
                 <div
-                  class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                  class="d-flex justify-content-between flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
                 >
                   <img
                     src="./images/course/course-5.png"
@@ -260,12 +260,12 @@
                   />
                   <div class="ms-3 mt-4 d-flex align-items-center lh-sm">
                     <article>
-                      <h3>Fundamental of UI/UX Design</h3>
+                      <h4>Fullstack Web Development</h4>
                       <p class="text-secondary">
                         Some quick example text to build on the card title and
                         make up the bulk of the card.
                       </p>
-                      <h3 class="text-info">Price : 20$</h3>
+                      <h5 class="text-info">Price:40$</h5>
                     </article>
                   </div>
                 </div>
@@ -274,7 +274,7 @@
             <div class="col-lg-6 col-md-12">
               <!-- Card No : 4 -->
               <div
-                class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                class="d-flex justify-content-between flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
               >
                 <img
                   src="./images/course/course-2.png"
@@ -283,18 +283,18 @@
                 />
                 <div class="ms-3 mt-4 d-flex align-items-center lh-sm">
                   <article>
-                    <h3>Fundamental of UI/UX Design</h3>
+                    <h4>Digital Marketing</h4>
                     <p class="text-secondary">
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
                     </p>
-                    <h3 class="text-info">Price : 20$</h3>
+                    <h5 class="text-info">Price:50$</h5>
                   </article>
                 </div>
               </div>
               <!-- Card No : 5 -->
               <div
-                class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                class="d-flex justify-content-between flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
               >
                 <img
                   src="./images/course/course-5.png"
@@ -303,18 +303,18 @@
                 />
                 <div class="ms-3 d-flex mt-4 align-items-center lh-sm">
                   <article>
-                    <h3>Fundamental of UI/UX Design</h3>
+                    <h4>Photography Basic Rules</h4>
                     <p class="text-secondary">
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
                     </p>
-                    <h3 class="text-info">Price : 20$</h3>
+                    <h5 class="text-info">Price:60$</h5>
                   </article>
                 </div>
               </div>
               <!-- Card No : 6 -->
               <div
-                class="d-flex justify-content-between flex-column flex-md-row shadow-sm mb-3 mt-4"
+                class="d-flex justify-content-between flex-column rounded-3 flex-md-row shadow-sm mb-3 mt-4"
               >
                 <img
                   src="./images/course/course-6.png"
@@ -323,12 +323,12 @@
                 />
                 <div class="ms-3 d-flex mt-4 align-items-center lh-sm">
                   <article>
-                    <h3>Fundamental of UI/UX Design</h3>
+                    <h4>Motion Graphics</h4>
                     <p class="text-secondary">
                       Some quick example text to build on the card title and
                       make up the bulk of the card.
                     </p>
-                    <h3 class="text-info">Price : 20$</h3>
+                    <h5 class="text-info">Price:70$</h5>
                   </article>
                 </div>
               </div>
@@ -384,7 +384,7 @@
                   <br />
                 </div>
                 <article class="mt-3 me-5 text-center">
-                  <button class="btn btn-outline-info">Read More</button>
+                  <button class="btn btn-outline-info"><h4>Read More</h4></button>
                 </article>
               </div>
             </div>
@@ -402,7 +402,7 @@
             <h2 class="fw-bold">Ready to join?</h2>
             <p class="fw-semibold">
               It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout
+              the readable <br> content of a page when looking at its layout
             </p>
           </article>
           <article>
@@ -437,8 +437,8 @@
               alt=""
             />
             <article class="mt-3 shadow-sm">
-              <h4>Awlad Hossain</h4>
-              <p class="text-secondary">UI/UX Designer</p>
+              <h4>Imran Khan Sojib</h4>
+              <p class="text-secondary pb-3">Web Developer </p>
             </article>
           </div>
           <!-- Student 2 -->
@@ -449,8 +449,14 @@
               alt=""
             />
             <article class="mt-3 shadow-sm">
-              <h4>Jannatul Islam</h4>
-              <p class="text-secondary">Motion Design</p>
+              <h4>MoHona
+                <i class="fa-solid fa-heart-crack text-danger"></i>
+
+
+
+
+              </h4>
+              <p class="text-secondary pb-3">Motion Design</p>
             </article>
           </div>
           <!-- Student 3 -->
@@ -461,8 +467,8 @@
               alt=""
             />
             <article class="mt-3 shadow-sm">
-              <h4>Imran Hossain</h4>
-              <p class="text-secondary">Graphic Designer</p>
+              <h4>Saiful Isalm</h4>
+              <p class="text-secondary pb-3">UI/UX Designer </p>
             </article>
           </div>
           <!-- Student 4 -->
@@ -473,8 +479,12 @@
               alt=""
             />
             <article class="mt-3 shadow-sm">
-              <h4>Nishi Akter</h4>
-              <p class="text-secondary">Web Developer</p>
+              <h4>Marufa
+                <i class="fa-solid fa-heart text-danger"></i>
+
+
+              </h4>
+              <p class="text-secondary pb-3">Graphic Designer</p>
             </article>
           </div>
         </div>
@@ -499,7 +509,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-12 col-sm-12 mb-3 mt-3">
             <div class="shadow-sm p-3">
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex justify-content-between  align-items-center">
                 <img class="img-fluid" src="./images/comma.png" alt="" />
                 <article>
                   <i class="fa-solid fa-star text-warning"></i>
@@ -522,7 +532,7 @@
                   alt=""
                 />
                 <article class="ms-3 lh-sm">
-                  <h5>Awlad Hossain</h5>
+                  <h5>Saiful Islam</h5>
                   <p class="text-secondary">UI Designer</p>
                 </article>
               </div>
@@ -553,7 +563,11 @@
                   alt=""
                 />
                 <article class="ms-3 lh-sm">
-                  <h5>Shanta Akter</h5>
+                  <h5>Marufa
+                    <i class="fa-solid fa-heart text-danger"></i>
+
+
+                  </h5>
                   <p class="text-secondary">Graphic Designer</p>
                 </article>
               </div>
@@ -745,69 +759,27 @@
       </section>
       <!-- end : company section  -->
     </main>
-    <!-- Start : footer -->
-    <footer class="mt-5 w-100 last_part p-5">
-      <div class="d-flex justify-content-center">
-        <article class="text-white text-center">
-          <h1>Pro Edu</h1>
-          <p class="lh-lg">
-            Office 41, Zawaya Buildin, Ghala Muscat, <br />
-            Sultanate of Oman <br />
-            Privacy Ploicy | Terms of use
-          </p>
-        </article>
-      </div>
-      <div>
-        <article class="d-flex justify-content-center ms-5 mt-3">
-          <i class="fa-brands fa-facebook fs-3 text-white icons"></i>
-          <i class="fa-brands fa-twitter fs-3 text-white icons"></i>
-          <i class="fa-brands fa-instagram fs-3 text-white icons"></i>
-          <i class="fa-brands fa-linkedin fs-3 text-white icons"></i>
-        </article>
-      </div>
-    </footer>
+   
+    <!-- Footer start -->
+    <footer class="bg-black p-5">
+      <div class="container text-center">
+        <div>
+          <h1 class="text-white">Pro Edu</h1>
+          <p class="text-light">Office 41, Zawaya Buildin, Ghala Muscat,
 
-    <!-- end : footer -->
-    <!-- Modal  -->
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Hi, Buddy</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <p>
-              Welcome to my page... I am Rifat. I'm trying to become a Web
-              Developer. For this I'm trying hard. I will try my best. Thank
-              You..
-            </p>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">Understood</button>
-          </div>
+           <br> Sultanate of Oman <br>
+            Privacy Ploicy | Terms of use</p>
+        </div>
+        <div class="fs-3 text gap-4">
+          <i class="fa-brands fa-facebook text-white"></i>
+          <i class="fa-brands fa-twitter  text-white"></i>
+          <i class="fa-brands fa-google text-white"></i>
+          <i class="fa-brands fa-tiktok text-white"></i>
         </div>
       </div>
-    </div>
+    </footer>
+    <!-- Footer end -->
+     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
