--- a/Index.html
+++ b/Index.html
@@ -450,7 +450,7 @@
             />
             <article class="mt-3 shadow-sm">
               <h4>MoHona
-                <i class="fa-solid fa-heart-crack text-danger"></i>
+               
 
 
 
@@ -467,7 +467,7 @@
               alt=""
             />
             <article class="mt-3 shadow-sm">
-              <h4>Saiful Isalm</h4>
+              <h4>Saiful Islam</h4>
               <p class="text-secondary pb-3">UI/UX Designer </p>
             </article>
           </div>
@@ -480,7 +480,7 @@
             />
             <article class="mt-3 shadow-sm">
               <h4>Marufa
-                <i class="fa-solid fa-heart text-danger"></i>
+               
 
 
               </h4>
@@ -563,11 +563,7 @@
                   alt=""
                 />
                 <article class="ms-3 lh-sm">
-                  <h5>Marufa
-                    <i class="fa-solid fa-heart text-danger"></i>
-
-
-                  </h5>
+                  <h5>Marufa</h5>
                   <p class="text-secondary">Graphic Designer</p>
                 </article>
               </div>
