--- a/Index.html
+++ b/Index.html
@@ -395,9 +395,7 @@
 
       <!-- Start: Ready to join section -->
       <section class="container mt-5 bg-info mb-5 rounded">
-        <div
-          class="container d-flex flex-column flex-lg-row flex-xs-column justify-content-between align-items-center p-5"
-        >
+        
           <article class="text-white">
             <h2 class="fw-bold">Ready to join?</h2>
             <p class="fw-semibold">
@@ -405,13 +403,13 @@
               the readable <br> content of a page when looking at its layout
             </p>
           </article>
+          
           <article>
             <a
               href=""
               class="btn btn-outline-primary fs-5 fw-semibold me-5"
               data-bs-toggle="modal"
-              data-bs-target="#exampleModal"
-            >
+              data-bs-target="#exampleModal">
               Register Now
             </a>
           </article>
@@ -434,8 +432,7 @@
             <img
               class="img-fluid w-100"
               src="./images/student/student-1.png"
-              alt=""
-            />
+              alt="" />
             <article class="mt-3 shadow-sm">
               <h4>Imran Khan Sojib</h4>
               <p class="text-secondary pb-3">Web Developer </p>
